<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:background="@color/white"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/iv_terrier_main"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/terrier_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/tv_dog_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:text="@string/my_dog_age"
            android:textColor="@color/indigo"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_terrier_main" />

        <TextView
            android:id="@+id/tv_dog_age_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:text="@string/how_old_are_you"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_dog_age" />

        <EditText
            android:id="@+id/et_enter_your_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:hint="@string/enter_your_age"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dog_age_input" />

        <TextView
            android:id="@+id/tv_dog_age_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:hint="@string/dog_age"
            android:padding="24dp"
            android:textColor="@color/indigo"
            android:textColorHint="#757575"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_calculate_dog_age"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_your_age"
            tools:layout_editor_absoluteX="30dp" />

        <Button
            android:id="@+id/btn_calculate_dog_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/calculate_dog_age"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>